@@ -6,8 +6,8 @@ GtkSourceBuffer
 GtkSourceBufferClass
 gtk_source_buffer_new
 gtk_source_buffer_new_with_language
-gtk_source_buffer_set_highlight
-gtk_source_buffer_get_highlight
+gtk_source_buffer_set_highlight_syntax
+gtk_source_buffer_get_highlight_syntax
 gtk_source_buffer_set_language
 gtk_source_buffer_get_language
 gtk_source_buffer_set_check_brackets
