@@ -77,7 +77,7 @@ in a view widget.
 
 </para>
 
-<!-- ##### ARG GtkSourceBuffer:highlight ##### -->
+<!-- ##### ARG GtkSourceBuffer:highlight-syntax ##### -->
 <para>
 
 </para>
@@ -128,7 +128,7 @@ in a view widget.
 @Returns: 
 
 
-<!-- ##### FUNCTION gtk_source_buffer_set_highlight ##### -->
+<!-- ##### FUNCTION gtk_source_buffer_set_highlight_syntax ##### -->
 <para>
 
 </para>
@@ -137,7 +137,7 @@ in a view widget.
 @highlight: 
 
 
-<!-- ##### FUNCTION gtk_source_buffer_get_highlight ##### -->
+<!-- ##### FUNCTION gtk_source_buffer_get_highlight_syntax ##### -->
 <para>
 
 </para>
