@@ -1,5 +1,10 @@
 2007-08-25  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/gtksourcebuffer.[ch]: api review: highlight ->
+	highlight_syntax
+
+2007-08-25  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/gtksourceview.[ch]: api review: tabs-width -> tab-width
 
 2007-08-25  Paolo Borelli  <pborelli@katamail.com>
